--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ h2 {
 }
 #game-section {
   width: 100%;
-  height: 600px;
+  height: 100%;
 }
 #game {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  max-width: 505px;
-  height: 840px;
+  max-width: 503px;
+  height: 740px;
   border: 1px solid black;
 
   background-color: blue;
@@ -35,7 +35,13 @@ h2 {
 }
 .playerPosition {
   background-color: red;
+  border-radius: 10px;
 }
 .obstacles {
-  background: black;
+  background-color: black;
+  box-shadow: 10px 5px 5px red;
+}
+
+.unclickable {
+  pointer-events: none;
 }
