--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ h2 {
   text-align: center;
 }
 #landing-page {
+  height: 100%;
+  width: 100%;
+  background-color: aquamarine;
 }
 #game-screen {
   background-color: aqua;
