--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,114 @@
 * {
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-h1,
-h2 {
+h1 {
   text-align: center;
 }
+h2 {
+  text-align: center;
+  margin-bottom: 15rem;
+}
+button {
+  border: solid 0.1rem black;
+  width: 10rem;
+  height: 5rem;
+  border-radius: 2rem;
+}
+button:hover {
+  background-color: #3b08f5;
+}
+
+button:active {
+  background-color: #3b08f5;
+  box-shadow: 0 3px black;
+  transform: translateY(4px);
+}
 #landing-page {
-  position: relative;
   background-image: url(../img/—Pngtree—cosmic\ orbit\ of\ solar\ system_6857440.png);
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   aspect-ratio: 1;
   width: 100%;
+  flex-direction: column;
+}
+#landing-titles {
+  margin-bottom: 7rem;
 }
 #landing-button {
-  position: absolute;
-  top: 500px;
+  text-align: center;
+  margin-bottom: 20rem;
+}
+#rule-btn {
+  width: 10rem;
+  height: 5rem;
+  border-radius: 2rem;
+  margin-right: 2rem;
+}
+#start-init {
+  width: 10rem;
+  height: 5rem;
+  border-radius: 2rem;
+}
+#link {
+  text-align: center;
+  font-weight: 900;
+}
+#rule-screen {
+  background-image: url(../img/max-larochelle-uu-Jw5SunYI-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  width: 100%;
+  aspect-ratio: 1.5;
+
+  flex-direction: column;
+  gap: 3rem;
+}
+#rule-text {
+  align-self: center;
+  width: 40%;
+  text-align: center;
+}
+#rule-text > p {
+  font-style: italic;
+}
+#menu {
+  align-self: center;
+}
+#initialize-screen {
+  max-height: 800px;
+  aspect-ratio: 1;
+  align-items: center;
+  flex-direction: column;
+  gap: 3rem;
+  background-image: url(../img/emma-gossett-B645igbiKCw-unsplash.png);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+#initialize-screen > h1 {
+  margin-bottom: 10rem;
+  color: white;
+}
+#send-name {
+  margin-left: 5rem;
+}
+#menu-from-init {
+  margin-bottom: 10rem;
+}
+#label {
+  color: white;
 }
 #game-screen {
   background-color: aqua;
   position: relative;
-
   width: 100%;
   height: 100%;
 }
-#rule-screen {
-  width: 100%;
-  aspect-ratio: 1;
-  background-color: aqua;
-}
-#menu {
-  position: absolute;
-  left: auto 50px;
-}
+
 #game {
   margin: 0 auto;
   display: flex;
@@ -104,8 +180,4 @@ h2 {
   background-color: black;
   box-shadow: 10px 5px 5px red;
   border-radius: 3px;
-}
-
-#menu-from-init {
-  height: 30px;
 }
