--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: kode Mono;
 }
 
 h1 {
@@ -26,6 +26,7 @@ button:active {
   transform: translateY(4px);
 }
 #landing-page {
+  background-color: blue;
   background-image: url(../img/—Pngtree—cosmic\ orbit\ of\ solar\ system_6857440.png);
   background-size: cover;
   background-position: center;
@@ -72,7 +73,18 @@ button:active {
   width: 40%;
   text-align: center;
 }
+#rule-text > ul {
+  font-style: oblique;
+  font-size: 2rem;
+  list-style: none;
+  overflow: scroll;
+}
+#rule-text > h1 {
+  font-size: 3rem;
+}
 #rule-text > p {
+  font-size: 2rem;
+  line-height: 2rem;
   font-style: italic;
 }
 #menu {
@@ -84,7 +96,14 @@ button:active {
   align-items: center;
   flex-direction: column;
   gap: 3rem;
-  background-image: url(../img/emma-gossett-B645igbiKCw-unsplash.png);
+  background: rgb(2, 0, 36);
+  background: radial-gradient(
+    circle,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(29, 200, 195, 1) 38%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  /* background-image: url(../img/emma-gossett-B645igbiKCw-unsplash.png); */
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -101,42 +120,48 @@ button:active {
 }
 #label {
   color: white;
+  border-radius: 20px;
+}
+#name-register {
+  height: 2rem;
+  border-radius: 20px;
+  margin-bottom: 2rem;
 }
 #game-screen {
-  background-color: aqua;
   position: relative;
   width: 100%;
   height: 100%;
+  background-image: url(../img/denis-degioanni-9wH624ALFQA-unsplash.jpg);
+  background-size: cover;
 }
 
 #game {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   max-width: 520px;
-  height: 740px;
-  border: 1px solid black;
-  background-color: rgb(10, 241, 10);
-  gap: 10px;
+  height: 50%;
+  border: 9px solid black;
+  gap: 2rem;
 }
 .divLine {
   display: flex;
+  gap: 1px;
 }
-
 .cell {
   display: flex;
   width: 40px;
   height: 40px;
   border: 3px solid black;
-  background-color: turquoise;
+  background-color: white;
   margin: 0;
+  border-radius: 20px;
 }
-#new-board {
-  height: 30%;
-}
+
 #menu-from-game {
-  height: 30%;
-  aspect-ratio: 1;
+  justify-self: flex-end;
 }
 .flex {
   display: flex;
@@ -162,22 +187,62 @@ button:active {
   height: 100px;
   aspect-ratio: 1;
 }
-
 .timer {
-  width: 50px;
-  aspect-ratio: 1;
+  margin-top: 1rem;
+  align-self: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  color: white;
 }
 .name-recipient {
-  width: 50px;
-  aspect-ratio: 1;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+
+  margin-top: 1rem;
+  align-self: center;
+  text-align: center;
+  width: 100%;
+
+  color: white;
+  padding-bottom: 1rem;
 }
 
 .playerPosition {
-  background-color: rgb(236, 4, 159);
-  border-radius: 10px;
+  background-image: url(../img/PERSONNAGE.svg);
+  border-radius: 20px;
 }
 .obstacles {
-  background-color: black;
-  box-shadow: 10px 5px 5px red;
-  border-radius: 3px;
+  background-image: url(../img/MOON.svg);
+  /* background: radial-gradient(
+    circle,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(29, 29, 200, 1) 68%,
+    rgba(0, 212, 255, 1) 100%
+  ); */
+  box-shadow: 10px 5px 5px black;
+  border-radius: 20px;
+}
+#end-screen {
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 900px;
+  background-image: url(../img/adrian-pelletier-Mcc5uQF9Ucw-unsplash.png);
+  background-size: contains;
+  background-position: center;
+}
+#text-end {
+  margin: 20px auto;
+  padding: 15px;
+  height: 700px;
+  width: 400px;
+  box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.5),
+    -1px -1px 2px rgba(255, 255, 255, 1);
+}
+#text-end > p {
+  line-height: 3rem;
+  font-size: 2rem;
+  animation: stroke 5s infinite alternate;
+  stroke-width: 2;
+  stroke: #365fa0;
 }
