--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-* {
+*:not(dialog) {
+  margin: 0;
   box-sizing: border-box;
   font-family: kode Mono;
 }
@@ -31,8 +32,7 @@ button:active {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  aspect-ratio: 1;
-  width: 100%;
+
   flex-direction: column;
 }
 #landing-titles {
@@ -129,8 +129,8 @@ button:active {
 }
 #game-screen {
   position: relative;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   background-image: url(../img/denis-degioanni-9wH624ALFQA-unsplash.jpg);
   background-size: cover;
 }
@@ -142,9 +142,9 @@ button:active {
   display: flex;
   flex-direction: column;
   max-width: 520px;
-  height: 50%;
+
   border: 9px solid black;
-  gap: 2rem;
+  gap: 0.5rem;
 }
 .divLine {
   display: flex;
@@ -170,8 +170,9 @@ button:active {
 }
 
 #dialog {
+  font-family: Kode Mono;
   position: absolute;
-  right: 650px;
+  right: 670px;
   top: 400px;
   background-color: black;
   color: white;
@@ -179,8 +180,9 @@ button:active {
   aspect-ratio: 1;
 }
 #dialog-error {
+  font-family: Kode Mono;
   position: absolute;
-  right: 650px;
+  left: 475px;
   top: 300px;
   background-color: black;
   color: white;
@@ -197,14 +199,12 @@ button:active {
 }
 .name-recipient {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-
   margin-top: 1rem;
   align-self: center;
   text-align: center;
   width: 100%;
-
   color: white;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 .playerPosition {
@@ -249,6 +249,6 @@ button:active {
 #play-music {
   width: 3rem;
 }
-#pause-music {
+#stop-music {
   width: 3rem;
 }
