--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,16 @@ button {
   border-radius: 2rem;
 }
 button:hover {
-  background-color: #3b08f5;
+  font-size: 16px;
+  font-weight: 600;
+  color: black;
+  cursor: pointer;
+
+  height: 7rem;
+  text-align: center;
+  border: none;
+  background-size: 300% 100%;
+  border-radius: 50px;
 }
 
 button:active {
@@ -35,8 +44,11 @@ button:active {
 
   flex-direction: column;
 }
+#landing-page > h1 {
+  margin-bottom: 2rem;
+}
 #landing-titles {
-  margin-bottom: 7rem;
+  margin-top: 7rem;
 }
 #landing-button {
   text-align: center;
@@ -77,7 +89,6 @@ button:active {
   font-style: oblique;
   font-size: 2rem;
   list-style: none;
-  overflow: scroll;
 }
 #rule-text > h1 {
   font-size: 3rem;
@@ -91,8 +102,7 @@ button:active {
   align-self: center;
 }
 #initialize-screen {
-  max-height: 800px;
-  aspect-ratio: 1;
+  height: 100vh;
   align-items: center;
   flex-direction: column;
   gap: 3rem;
@@ -129,8 +139,8 @@ button:active {
 }
 #game-screen {
   position: relative;
-  /* width: 100%;
-  height: 100%; */
+  /* width: 100%;*/
+  height: 100vh;
   background-image: url(../img/denis-degioanni-9wH624ALFQA-unsplash.jpg);
   background-size: cover;
 }
@@ -142,7 +152,6 @@ button:active {
   display: flex;
   flex-direction: column;
   max-width: 520px;
-
   border: 9px solid black;
   gap: 0.5rem;
 }
@@ -165,8 +174,6 @@ button:active {
 }
 .flex {
   display: flex;
-  width: 100%;
-  height: 100%;
 }
 
 #dialog {
@@ -225,8 +232,8 @@ button:active {
 #end-screen {
   align-items: center;
   justify-content: space-between;
-  width: 100%;
-  height: 900px;
+
+  height: 100vh;
   background-image: url(../img/adrian-pelletier-Mcc5uQF9Ucw-unsplash.png);
   background-size: contains;
   background-position: center;
@@ -245,10 +252,4 @@ button:active {
   animation: stroke 5s infinite alternate;
   stroke-width: 2;
   stroke: #365fa0;
-}
-#play-music {
-  width: 3rem;
-}
-#stop-music {
-  width: 3rem;
 }
