--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,12 @@ button:active {
   transform: translateY(4px);
 }
 #landing-page {
+  height: 100vh;
   background-color: blue;
   background-image: url(../img/—Pngtree—cosmic\ orbit\ of\ solar\ system_6857440.png);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-
   flex-direction: column;
 }
 #landing-page > h1 {
@@ -197,21 +197,20 @@ button:active {
 }
 .timer {
   font-weight: 900;
-  margin-top: 1rem;
+
   align-self: center;
   text-align: center;
   width: 100%;
-  height: 100%;
+
   color: black;
 }
 .name-recipient {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  margin-top: 1rem;
+
   align-self: center;
   text-align: center;
   width: 100%;
   color: white;
-  padding-bottom: 0.5rem;
 }
 
 .playerPosition {
