--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ h2 {
 }
 button {
   border: solid 0.1rem black;
-  width: 10rem;
+  width: 9rem;
   height: 5rem;
   border-radius: 2rem;
 }
@@ -22,7 +22,7 @@ button:hover {
   font-weight: 600;
   color: black;
   cursor: pointer;
-  height: 7rem;
+  height: 6rem;
   text-align: center;
   border: none;
   background-size: 300% 100%;
@@ -105,6 +105,7 @@ button:active {
 }
 
 #initialize-screen {
+  height: 100vh;
   align-items: center;
   flex-direction: column;
   gap: 3rem;
@@ -142,7 +143,7 @@ button:active {
 #game-screen {
   position: relative;
   /* width: 100%;*/
-
+  height: 100vh;
   background-image: url(../img/denis-degioanni-9wH624ALFQA-unsplash.jpg);
   background-size: cover;
 }
@@ -155,18 +156,17 @@ button:active {
   flex-direction: column;
   max-width: 520px;
   border: 9px solid black;
-  gap: 0.5rem;
+  gap: 0.3rem;
 }
 .divLine {
   display: flex;
-  gap: 1px;
 }
 .cell {
   display: flex;
   width: 40px;
   height: 40px;
   border: 3px solid black;
-  background-color: white;
+  background-color: rgb(72, 255, 0);
   margin: 0;
   border-radius: 20px;
 }
@@ -179,7 +179,6 @@ button:active {
 }
 
 #dialog {
-  font-family: Kode Mono;
   position: absolute;
   right: 670px;
   top: 400px;
@@ -219,6 +218,7 @@ button:active {
 .playerPosition {
   background-image: url(../img/PERSONNAGE.svg);
   border-radius: 20px;
+  border: solid 2px black;
 }
 .obstacles {
   background-image: url(../img/MOON.svg);
