--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ button:active {
 #name-register {
   height: 2rem;
   border-radius: 20px;
-  margin-bottom: 2rem;
+  /* margin-botom: 2rem; */
 }
 #game-screen {
   position: relative;
@@ -156,7 +156,7 @@ button:active {
   flex-direction: column;
   max-width: 520px;
   border: 9px solid black;
-  gap: 0.3rem;
+  gap: 0.2rem;
 }
 .divLine {
   display: flex;
@@ -199,16 +199,13 @@ button:active {
 }
 .timer {
   font-weight: 900;
-
   align-self: center;
   text-align: center;
   width: 100%;
-
   color: black;
 }
 .name-recipient {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-
   align-self: center;
   text-align: center;
   width: 100%;
