--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ button:active {
   border-radius: 20px;
 }
 #end-screen {
+  height: 100vh;
   align-items: center;
   justify-content: space-between;
   background-image: url(../img/adrian-pelletier-Mcc5uQF9Ucw-unsplash.png);
@@ -245,7 +246,7 @@ button:active {
 #text-end {
   margin: 20px auto;
   padding: 15px;
-  height: 700px;
+
   width: 400px;
   box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.5),
     -1px -1px 2px rgba(255, 255, 255, 1);
